# Android-opencv-native-samples

./: README.md
CaptureOnly/app/: CMakeLists.txt  build.gradle
CaptureOnly/app/src/androidTest/java/org/opencv/samples/captureonly/: ExampleInstrumentedTest.java
CaptureOnly/app/src/main/: AndroidManifest.xml
CaptureOnly/app/src/main/cpp/: fps.h  native-lib.cpp  native-lib.h
CaptureOnly/app/src/main/java/org/opencv/samples/captureonly/: JniManager.java  MainActivity.java
CaptureOnly/app/src/main/res/layout/: activity_main.xml
CaptureOnly/app/src/main/res/values/: strings.xml
CaptureOnly/gradle/wrapper/: gradle-wrapper.properties
face-detection/app/: CMakeLists.txt  build.gradle
face-detection/app/src/androidTest/java/org/opencv/samples/facedetect/: ExampleInstrumentedTest.java
face-detection/app/src/main/: AndroidManifest.xml
face-detection/app/src/main/cpp/: native-lib.cpp  native-lib.h
face-detection/app/src/main/java/org/opencv/samples/facedetect/: FdActivity.java  ImageControllers.java
face-detection/app/src/main/res/layout/: face_detect_surface_view.xml  layout_main_activity.xml
face-detection/app/src/main/res/values/: strings.xml
face-detection/app/src/test/java/org/opencv/samples/facedetect/: ExampleUnitTest.java
face-detection/gradle/wrapper/: gradle-wrapper.properties
